# libraryan

./: .gitignore  Cargo.toml  README.md
migrations/2020-02-02-164552_create_users/: up.sql
migrations/2020-02-02-184406_create_books/: up.sql
migrations/2020-02-02-191110_create_authors/: up.sql
migrations/2020-02-02-191359_create_book_author_mappings/: down.sql  up.sql
migrations/2020-02-02-191729_create_categories/: up.sql
migrations/2020-02-02-191912_create_book_category_mappings/: down.sql  up.sql
migrations/2020-02-02-192955_create_collections/: up.sql
migrations/2020-02-02-194036_create_user_collection_mappings/: down.sql  up.sql
migrations/2020-02-02-195022_create_permissions/: up.sql
migrations/2020-02-02-195125_create_user_permission_mappings/: down.sql  up.sql
migrations/2020-02-02-195509_insert_permissions/: down.sql  up.sql
migrations/2020-02-02-200901_create_logs/: up.sql
src/: config.rs  error.rs  globals.rs  main.rs  schema.rs
src/models/: authors.rs  books.rs  mod.rs  permissions.rs  users.rs
